--- a/index.html
+++ b/index.html
@@ -1,47 +1,87 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Perfil</title>
-</head>
-<body>
-    <ul>
-        <li>
-            <a href="index.html"> Home </a>
-        </li>
-        <li>
-            <a href="book.html"> Book your tour </a>
-        </li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My profile</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body class="background">
+    <ul id="menu">
+      <li>
+        <a href="index.html"> Home </a>
+      </li>
+      <li>
+        <a href="book.html"> Book your tour </a>
+      </li>
     </ul>
 
-    <h1>Welcome to Recife!</h1>
-    <p>
-        Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose.
-        Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl.
-        Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.
-        Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis.
-    </p>
-    <p>
-        Mussum Ipsum, cacilds vidis litro abertis. Paisis, filhis, espiritis santis.
-        Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose.Si u mundo tá muito paradis?
-        Toma um mé que o mundo vai girarzis!Detraxit consequat et quo num tendi nada.
-    </p>
+    <h1 class="center font1">Welcome to Recife!</h1>
+    <div class="container">
+      <div class="p-30 font1">
+        <p>
+          Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem
+          dormir, sentado sem cochilar e fazendo pose. Mauris nec dolor in eros
+          commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl. Mais
+          vale um bebadis conhecidiss, que um alcoolatra anonimis. Tá
+          deprimidis, eu conheço uma cachacis que pode alegrar sua vidis.
+        </p>
+        <p>
+          Mussum Ipsum, cacilds vidis litro abertis. Paisis, filhis, espiritis
+          santis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e
+          fazendo pose.Si u mundo tá muito paradis? Toma um mé que o mundo vai
+          girarzis!Detraxit consequat et quo num tendi nada.
+        </p>
+      </div>
+      <div>
+        <img
+          class="br"
+          src="assets/img/torre-cristal.jpeg.png"
+          alt="Photo of Torre de Cristal monument"
+        />
+      </div>
+    </div>
+    <h2 class="center font1">Recife in chords</h2>
 
-    <img src="assets/img/torre-cristal.jpeg.png" alt="Photo of the Torre de Cristal monument">
-
-    <h2>Recife in chords</h2>
-
-    <iframe 
-    width="560" 
-    height="315" 
-    src="https://www.youtube.com/embed/-jSVLwz1bag" 
-    title="LENINE - LEÃO DO NORTE" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen
-    ></iframe>
-    
-</body>
+    <div class="container mb-50">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/-jSVLwz1bag"
+        title="LENINE - LEÃO DO NORTE"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
+    <footer class="center">
+        <div class="container">
+          <a href="https://www.instagram.com/malsucedido/" target="_blank">
+            <img
+              class="logo p-30"
+              src="assets/img/instagram-logo.png"
+              alt="Logo do Instagram"
+            />
+          </a>
+          <a href="https://www.linkedin.com/in/leonardo-fs/" target="_blank">
+            <img
+              class="logo p-30"
+              src="assets/img/linkedin-logo.png"
+              alt="Logo do Linkedin"
+            />
+          </a>
+          <a href="https://github.com/leofsantos" target="_blank">
+            <img
+              class="logo p-30"
+              src="assets/img/github-logo.png"
+              alt="Logo do Github"
+            />
+          </a>
+        </div>
+        <p class="bottom">
+          Todos os direitos reservados: Leonardo dos Santos &copy;
+        </p>
+      </footer>
+  </body>
 </html>
