--- a/book.html
+++ b/book.html
@@ -22,24 +22,19 @@
       <div class="p-30 font1">
         <form class="form">
           <label for="name">Name:</label><br />
-          <input type="text" id="name" />
-          <br />
+          <input type="text" id="name" onkeyup='validatesName()' required>
+          <div id='txtName'></div>
           <br />
           <label for="travelbuddy">Travel buddies/partners:</label><br />
-          <textarea
-            name="travelbuddy"
-            id="travelbuddy"
-            cols="30"
-            rows="3"
-          ></textarea>
-          <br />
+          <input name="travelbuddy" id="travelbuddy" onkeyup='validatesBuddy()' required>
+          <div id='txtBuddy'></div>
           <br />
           <label for="email">E-mail:</label><br />
-          <input type="email" id="email" />
-          <br />
+          <input type="email" id="email" onkeyup='validatesEmail()'>
+          <div id='txtEmail'></div>
           <br />
           <label for="date">Date:</label><br />
-          <input type="date" id="date" />
+          <input type="date" id="date" required>
           <br />
           <br />
           <label for="observations">Observations:</label><br />
@@ -48,10 +43,11 @@
             id="observations"
             cols="30"
             rows="5"
-          ></textarea>
+            onkeyup='validatesObs()' required>
+        </textarea>
+          <div id="txtObs"></div>
           <br />
-          <br />
-          <button>Send</button>
+          <button onclick='send()'>Send</button>
         </form>
       </div>
       <div class="font1">
@@ -70,6 +66,9 @@
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
+          onmousemove="zoomIn()"
+          onmouseout="regularSize()"
+          id="map"
         ></iframe>
       </div>
     </div>
@@ -99,5 +98,6 @@
         </div>
         <p>Todos os direitos reservados: Leonardo dos Santos &copy;</p>
       </footer>
+      <script src="assets/js/script.js"></script>
   </body>
 </html>
